# mim_mlir

./: CMakeLists.txt  README.md  mlir.mim
.github/workflows/: linux.yml  macos.yml  windows.yml
include/mim/plug/mlir/: mlir.h
include/mlir/: lam_classifier.h  mlir_emitter.h  printer.h  region_tree.h  type_converter.h
include/mlir/ops/: affine.h  arith.h  func.h  linalg.h  math.h  memref.h  scf.h  tensor_util.h
lit/: add.mim  branch.mim  const.mim  fmul.mim  matmul.mim  tensor.mim
src/: mlir.cpp  normalizers.cpp
src/mlir/: lam_classifier.cpp  mlir_emitter.cpp  mlir_emitter_control_flow.cpp  mlir_emitter_core.cpp  mlir_emitter_helper.cpp  mlir_emitter_linalg.cpp  printer.cpp  region_tree.cpp  type_converter.cpp
